fixing home page layout issue

--- a/assets/sass/home/_style.sass
+++ b/assets/sass/home/_style.sass
@@ -33,7 +33,7 @@
                 @include responsive(991px)
                     height: 500px
                 @include responsive(675px)
-                    height: 420px
+                    height: 260px
     &.home-banner
         .banner-wrapper
             .img
@@ -139,6 +139,7 @@
             padding: 0
         img
             @include responsive(991px)
+                width: 100%
                 max-width: 350px
                 display: block
                 margin: 0 auto
